--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
